Commit one more time

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>Radio check. Pilot, please confirm.</p>
     <p>Testing 1, 2 is this working?</p>
-
+<img src="../Lady.jpg" height="400", width="600" alt="Lady">
 
 </body>
 </html>
