--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>Radio check. Pilot, please confirm.</p>
     <p>Testing 1, 2 is this working?</p>
 <img src="../Lady.jpg" height="400", width="600" alt="Lady">
+<p>Your Lady is so cute!</p>
 
 </body>
 </html>
